[project]
name = "taiwanese-politics-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.11.0",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
